# medicalLM

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requestirements.txt  requirement.txt  setup.py
causal-models/: README.md  adapter_config.json  config.json  special_tokens_map.json  tokenizer_config.json
causal-models/runs/Nov03_08-40-41_cradle/: events.out.tfevents.1699015241.cradle
causal-models/runs/Nov03_08-45-46_cradle/: events.out.tfevents.1699015547.cradle
causal-models/runs/Nov03_09-30-03_cradle/: events.out.tfevents.1699018203.cradle
causal-models/runs/Nov03_09-35-11_cradle/: events.out.tfevents.1699018512.cradle
causal-models/runs/Nov03_09-36-20_cradle/: events.out.tfevents.1699018580.cradle
causal-models/runs/Nov03_09-44-16_cradle/: events.out.tfevents.1699019056.cradle
causal-models/runs/Nov03_09-55-28_cradle/: events.out.tfevents.1699019729.cradle
causal-models/runs/Nov03_10-13-47_cradle/: events.out.tfevents.1699020827.cradle
causal-models/runs/Nov03_10-18-30_cradle/: events.out.tfevents.1699021110.cradle
causal-models/runs/Nov03_10-24-48_cradle/: events.out.tfevents.1699021488.cradle
causal-models/runs/Nov03_10-29-59_cradle/: events.out.tfevents.1699021800.cradle
causal-models/runs/Nov03_10-36-41_cradle/: events.out.tfevents.1699022201.cradle
causal-models/runs/Nov03_10-37-53_cradle/: events.out.tfevents.1699022274.cradle
causal-models/runs/Nov03_10-39-56_cradle/: events.out.tfevents.1699022396.cradle
causal-models/runs/Nov03_10-40-33_cradle/: events.out.tfevents.1699022433.cradle
causal-models/runs/Nov04_08-51-45_cradle/: events.out.tfevents.1699102305.cradle
causal-models/runs/Nov04_08-52-43_cradle/: events.out.tfevents.1699102363.cradle
causal-models/runs/Nov04_09-07-57_cradle/: events.out.tfevents.1699103278.cradle
causal-models/runs/Nov04_09-14-27_cradle/: events.out.tfevents.1699103667.cradle
causal-models/runs/Nov04_10-21-46_cradle/: events.out.tfevents.1699107706.cradle
causal-models/runs/Nov04_20-45-46_cradle/: events.out.tfevents.1699145146.cradle
data/: data_dict.json  know_merge.json  sample.json
data/data_ops/: create_dataset.py
data_ops/: create_dataset.py
medicalLM/: main.py  setup.py  utils.py
medicalLM/app/: api.py
medicalLM/data_ops/: create_dataset.py
medicalLM/finetune/: finetune.py  infer.py
medicalLM/frontend/: app.py  inferand.py  models.json
medicalLM/frontend/flagged/: log.csv
medicalLM/frontend/src/: App.js  index.js
medicalLM/frontend/src/components/: Header.jsx  Todos.jsx
medicalLM/ft/: abcd.py  base_inf.py  finetune.py  sample_ft.py  sample_inf.py
medicalLM/model_ops/: biogpt.py  biogpt2.py  biogpt_hf.py  mock.py
medicalLM/reference_ft/: base_inf.py  sample_ft.py  sample_inf.py
