[build-system]
requires = ["setuptools>=58.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medicalLM"
description= "finetune causal model to take question and emit answer"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.10.0"
authors = [{ name = "Clark Saben", email = "csaben@mail.umw.edu"},
{ name = "Andrew Ceniccola", email = "andrewsamce@me.com"}]
keywords = []
classifiers = [
    "Development Status :: 1 - MVP",
    "Environment :: Console",
    "Operating System :: Linux, MacOS",
    "Programming Language :: Python :: 3.10",
]
urls = { code = "https://github.com/andrarklabs/medicalLM" }
dependencies = [
	"peft",
	"transformers",	
	"python-dotenv"
]

optional-dependencies = { dev = ["pytest", "ruff", "black", "flake8", "mypy"]}

[tool.setuptools]
zip-safe = true
include-package-data = true

[tool.isort]
profile = "black"
src_paths = ["medicalLM"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_imports = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[tool.ruff]
select = ["B", "C90", "E", "F", "W"]
ignore = ["E501"]
line-length = 88

[tool.ruff.mccabe]
max-complexity = 18


